Fix project cover layout on mobile

--- a/_sass/img-2-ascii.scss
+++ b/_sass/img-2-ascii.scss
@@ -1,19 +1,19 @@
 .img-2-ascii-wrapper {
     --max-image-height: 450px;
     position: relative;
+    display: flex;
     img {
-        opacity: 0;
         width: 100%;
+        opacity: 0;
         height: auto;
         max-height: var(--max-image-height);
-        display: block;
     }
     .img-2-ascii {
         position: absolute;
-        display: block;
         top: 0;
-        left: 0;
+        bottom: 0;
         width: 100%;
-        height: 100%;
+        left: 0;
+        right: 0;
     }
 }
